--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
+    "autoprefixer": "^10.4.4",
     "next": "12.1.4",
+    "next-redux-wrapper": "^7.0.5",
+    "postcss": "^8.4.12",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-rating": "^2.0.5",
+    "react-redux": "^7.2.8",
+    "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
